--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".Areas" />
         <activity android:name=".Cuadrado" />
-        <activity android:name=".Triangulo" />
+        <activity android:name=".Rectangulo" />
         <activity android:name=".CalculoCuadrado" />
         <activity android:name=".CalculoRectangulo" />
         <activity android:name=".OperacionesRealizadas"></activity>
